# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import songsRouter from "./songs";
 import commentsRouter from "./comments";
 import takesRouter from "./takes";
+import musiciansRouter from "./musicians";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(songsRouter);
 router.use(commentsRouter);
 router.use(takesRouter);
+router.use(musiciansRouter);
 
 export default router;
