# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./songs";
 export * from "./comments";
 export * from "./takes";
+export * from "./musicians";
